Colaboratory를 통해 생성됨

--- a/20220411_py_03_파일다루기.ipynb
+++ b/20220411_py_03_파일다루기.ipynb
@@ -34,7 +34,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "861711c0-1e30-4918-f701-dedf015fba38"
+        "outputId": "54a2183b-0139-47da-edd9-46533da51fe1"
       },
       "source": [
         "# 구글드라이브 연동\n",
@@ -42,7 +42,7 @@
         "drive.mount('/gdrive', force_remount=True)\n",
         "# 연동할건데 별칭은 /gdrive로 할거야! 최대한 연결할거야"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -110,7 +110,7 @@
         "# 반복되는 드라이브 경로 변수화\n",
         "drive_path = '/gdrive/My Drive/temp/'"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -405,29 +405,6 @@
       },
       "execution_count": null,
       "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "!cat result.csv"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "fnN6v13Xo9he",
-        "outputId": "31b0d0ce-df67-4ef5-9b5d-566986be9bd8"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "평균 값 : 79.0"
-          ]
-        }
-      ]
     },
     {
       "cell_type": "code",
@@ -990,7 +967,7 @@
         "id": "cGRJr0tcgYzC"
       },
       "source": [
-        "## pickle ***\n",
+        "## pickle ✨✨✨✨\n",
         "객체의 형태를 그대로 유지하면서 파일에 저장하고 불러올 수 있게 하는 모듈이다."
       ]
     },
@@ -1191,7 +1168,7 @@
         "sheet['A1'] = 'Hello World'\n",
         "wb.save(drive_path + 'hello_world.xlsx')\n"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -1206,9 +1183,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0affQt7WUls6",
-        "outputId": "f2bad508-48ca-4850-d249-bb0c382186d2"
+        "outputId": "d86f3ef2-dca8-4701-83c2-c8192ca1de11"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -1231,7 +1208,7 @@
       "metadata": {
         "id": "m7YfNfwgYUuN"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -1247,9 +1224,9 @@
           "height": 35
         },
         "id": "YrJwzjUuY8YJ",
-        "outputId": "651c4188-3de5-4700-ac5a-ed2dcf3b9415"
+        "outputId": "9ce70297-21ac-4f27-c5dd-3c649cc1bed7"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1262,7 +1239,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 21
+          "execution_count": 9
         }
       ]
     },
@@ -1278,9 +1255,9 @@
           "height": 35
         },
         "id": "J3Fq2w33Zc43",
-        "outputId": "63413559-ad8a-4aaa-a3ec-699d2cb65659"
+        "outputId": "68d875f1-5042-439c-d33a-2fbac16aa513"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1293,7 +1270,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 22
+          "execution_count": 10
         }
       ]
     },
@@ -1826,15 +1803,6 @@
           ]
         }
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        ""
-      ],
-      "metadata": {
-        "id": "0-QnZVZZf7YM"
-      }
     },
     {
       "cell_type": "code",
