Colaboratory를 통해 생성됨

--- a/20220412_py_04_Numpy.ipynb
+++ b/20220412_py_04_Numpy.ipynb
@@ -41,7 +41,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "40071582-51fd-40b2-ffea-f1c075a404fe"
+        "outputId": "ce4d8dfc-ca98-44a8-e2e9-e4e8f8955c91"
       },
       "source": [
         "# 구글드라이브 연동\n",
@@ -54,31 +54,35 @@
         "# 반복되는 드라이브 경로 변수화\n",
         "drive_path = '/gdrive/My Drive/temp/'"
       ],
-      "execution_count": 10,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Mounted at /gdrive\n",
-            " 매수종목1.txt\t\t\t        sample1.pdf\n",
-            "'2. 영화평점, 날짜별 영화평점 시각화'  'sample (1).xlsx'\n",
-            " 매수종목2.txt\t\t\t        sample2.pdf\n",
-            " auto-mpg.csv\t\t\t        sample.docx\n",
-            " bmi_500.csv\t\t\t        sample_merge.pdf\n",
-            " 매수종목.csv\t\t\t        sample.xlsx\n",
-            "'demo (1).docx'\t\t\t        score.csv\n",
-            " demo.docx\t\t\t        test.db.db\n",
-            " example.docx\t\t\t        test.txt\n",
-            " height_weight.txt\t\t        Titanic배포용\n",
-            " hello_world.xlsx\t\t        titanic_test.csv\n",
-            " HelloWorld.xlsx\t\t        titanic_train.csv\n",
-            "'little-char (1).png'\t\t        titanic.xls\n",
-            " little-char.png\t\t        Traffic_Accident_2017.csv\n",
-            " population_number.csv\t\t        train.csv\n",
-            " ram_price.csv\t\t\t        user_id_mean.csv\n",
-            " ratings_small.txt\t\t        wine.csv\n",
-            "'sample1 (1).pdf'\t\t        남북한발전전력량.xlsx\n"
+            " 매수종목1.txt\t\t\t        sample.docx\n",
+            "'2. 영화평점, 날짜별 영화평점 시각화'   sample_merge.pdf\n",
+            " 매수종목2.txt\t\t\t        sample.xlsx\n",
+            " auto-mpg.csv\t\t\t        score.csv\n",
+            " bmi_500.csv\t\t\t        seoul.html\n",
+            " 매수종목.csv\t\t\t       'stock price (1).xlsx'\n",
+            " data_studentlist_en.csv\t       'stock price.xlsx'\n",
+            "'demo (1).docx'\t\t\t        stock_px.csv\n",
+            " demo.docx\t\t\t       'stock valuation.xlsx'\n",
+            " example.docx\t\t\t        test.db.db\n",
+            " height_weight.txt\t\t        test.txt\n",
+            " hello_world.xlsx\t\t        Titanic배포용\n",
+            " HelloWorld.xlsx\t\t        titanic_test.csv\n",
+            "'little-char (1).png'\t\t        titanic_train.csv\n",
+            " little-char.png\t\t        titanic.xls\n",
+            " population_number.csv\t\t        Traffic_Accident_2017.csv\n",
+            " ram_price.csv\t\t\t        train.csv\n",
+            " ratings_small.txt\t\t        user_id_mean.csv\n",
+            "'sample1 (1).pdf'\t\t        wine.csv\n",
+            " sample1.pdf\t\t\t        주가데이터.xlsx\n",
+            "'sample (1).xlsx'\t\t        남북한발전전력량.xlsx\n",
+            " sample2.pdf\n"
           ]
         }
       ]
@@ -142,7 +146,7 @@
         "# Numpy 모듈(라이브러리)를 import하고 np 라는 이름으로 부르는 것이 관례\n",
         "import numpy as np"
       ],
-      "execution_count": 3,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -232,7 +236,7 @@
         "id": "UBr4sLLtq2lD",
         "outputId": "41326db0-2dcb-4c3f-a967-9e0546848a9d"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -420,7 +424,7 @@
         "outputId": "2c1088b1-d25a-4c13-ffe1-0df675a54486"
       },
       "source": [
-        "# 데이터 타입 변경하기(강제)\n",
+        "# 데이터 타입 변경하기(강제) .astype(변경할 타입)\n",
         "array_int = np.array( [1,2,3] )\n",
         "print( array_int, array_int.dtype )\n",
         "\n",
@@ -447,17 +451,6 @@
           ]
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        ""
-      ],
-      "metadata": {
-        "id": "kndc6cLSw19i"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "code",
@@ -577,7 +570,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# 초기화 0으로 채워진 배열 생성\n",
+        "# 초기화 0으로 채워진 배열 생성 zeros(크기, 데이터타입)\n",
         "zero_array = np.zeros((3,2), dtype = 'int32')\n",
         "zero_array, zero_array.dtype, zero_array.shape"
       ],
@@ -607,7 +600,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# 1로 초기화 시키기\n",
+        "# 1로 초기화 시키기 ones(크기)\n",
         "np.ones((3, 2))"
       ],
       "metadata": {
@@ -897,17 +890,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [
-        ""
-      ],
-      "metadata": {
-        "id": "Gx-1H8R25Pkk"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "8aB0WahjrMEf"
@@ -1063,20 +1045,20 @@
         "array2d = array1d.reshape(3,3)\n",
         "\n",
         "print(array2d)\n",
-        "print('row=0', 'col=0', [0,0])\n",
-        "print('row=0', 'col=1', [0,1])\n",
-        "print('row=1', 'col=0', [1,0])\n",
-        "print('row=2', 'col=2', [2,2])\n",
-        "print('row=2', 'col=1', [2,1])"
+        "print('row=0', 'col=0', array2d[0,0])\n",
+        "print('row=0', 'col=1', array2d[0,1])\n",
+        "print('row=1', 'col=0', array2d[1,0])\n",
+        "print('row=2', 'col=2', array2d[2,2])\n",
+        "print('row=2', 'col=1', array2d[2,1])"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "55OagASqhuvD",
-        "outputId": "adb68480-ff56-495e-e887-ad4bdeada887"
+        "outputId": "952cd3f0-0e0b-4263-8cd0-0c0b1d6c0428"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -1085,11 +1067,11 @@
             "[[1 2 3]\n",
             " [4 5 6]\n",
             " [7 8 9]]\n",
-            "row=0 col=0 [0, 0]\n",
-            "row=0 col=1 [0, 1]\n",
-            "row=1 col=0 [1, 0]\n",
-            "row=2 col=2 [2, 2]\n",
-            "row=2 col=1 [2, 1]\n"
+            "row=0 col=0 1\n",
+            "row=0 col=1 2\n",
+            "row=1 col=0 4\n",
+            "row=2 col=2 9\n",
+            "row=2 col=1 8\n"
           ]
         }
       ]
@@ -1264,7 +1246,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "팬시 인덱싱"
+        "팬시 인덱싱 : 리스트 또는 ndarray 형태의 인덱싱 집합을 이용하여 여러 데이터를 추출"
       ],
       "metadata": {
         "id": "DHA_ynNVlLMv"
@@ -1276,7 +1258,7 @@
         "# 어떤 조건에 따라서 바꾸고 싶을 때 사용\n",
         "# 1차원\n",
         "arr = np.arange(1,10)\n",
-        "arr\n",
+        "print( arr )\n",
         "pindex = [2,4,7]\n",
         "arr[ pindex ]"
       ],
@@ -1285,10 +1267,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "WUzV8sNulOHp",
-        "outputId": "bb91c083-d4f2-4188-cbe8-de586aafbbff"
+        "outputId": "13e19b88-725d-401a-c61e-1b105039015c"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[1 2 3 4 5 6 7 8 9]\n"
+          ]
+        },
         {
           "output_type": "execute_result",
           "data": {
@@ -1297,7 +1286,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 26
+          "execution_count": 5
         }
       ]
     },
@@ -1306,22 +1295,23 @@
       "source": [
         "# 2차원\n",
         "arr = np.arange(1,10).reshape(3,3)\n",
-        "print(arr)\n",
+        "print(arr) ; print()\n",
         "\n",
         "# 행 : 팬시인덱싱, 열 : 슬라이싱 인덱싱 \n",
-        "arr[ [0,2], 2]  # [3, 9]\n",
-        "arr[ [0,2], 0:2 ]  # [[1,2], [7,8]]\n",
-        "arr[ [0,2] ] # [[1, 2, 3],[7,8,9]]\n",
-        "arr[ [0,2], :] "
+        "# arr[ [0,2], 2 ] : 행이 0행이고 2행인 값 중에서 2번째 열에 있는 값\n",
+        "print( arr[ [0,2], 2] )  ; print() # [3, 9] \n",
+        "print( arr[ [0,2], 0:2 ] ) ; print() # [[1,2], [7,8]]\n",
+        "print( arr[ [0,2] ] ) ; print()# [[1, 2, 3],[7,8,9]]\n",
+        "print( arr[ [0,2], :] )"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "VQBLATcClZ-H",
-        "outputId": "cd97f843-65e0-404d-d1ee-ccb9061095c6"
+        "outputId": "a9fb8b07-7700-4bce-c311-4a51f5d8fd05"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -1329,26 +1319,26 @@
           "text": [
             "[[1 2 3]\n",
             " [4 5 6]\n",
+            " [7 8 9]]\n",
+            "\n",
+            "[3 9]\n",
+            "\n",
+            "[[1 2]\n",
+            " [7 8]]\n",
+            "\n",
+            "[[1 2 3]\n",
+            " [7 8 9]]\n",
+            "\n",
+            "[[1 2 3]\n",
             " [7 8 9]]\n"
           ]
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([[1, 2, 3],\n",
-              "       [7, 8, 9]])"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 41
         }
       ]
     },
     {
       "cell_type": "markdown",
       "source": [
-        "불린 인덱싱"
+        "불린 인덱싱 : True/False 값 인덱싱 집합을 이용하여 해당 인덱스 위치에 있는 데이터를 추출"
       ],
       "metadata": {
         "id": "RRA0k-mtnacp"
@@ -1360,7 +1350,7 @@
         "# 1차원\n",
         "# 필터링과 검색이 동시에 가능하다\n",
         "arr = np.arange(1,10)\n",
-        "arr\n",
+        "print( arr )\n",
         "print(arr>5)\n",
         "bool_index = arr > 5\n",
         "print(bool_index)\n",
@@ -1372,14 +1362,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "4HUqWKhPnZGx",
-        "outputId": "e7f816a3-8fe9-411d-8e0f-8b9ced8a795d"
+        "outputId": "41c29031-64f1-44a2-ad23-9490d30d54fc"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "[1 2 3 4 5 6 7 8 9]\n",
             "[False False False False False  True  True  True  True]\n",
             "[False False False False False  True  True  True  True]\n",
             "[6 7 8 9]\n"
@@ -1393,7 +1384,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 47
+          "execution_count": 8
         }
       ]
     },
@@ -1488,15 +1479,6 @@
           "execution_count": 51
         }
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        ""
-      ],
-      "metadata": {
-        "id": "RRaEIOz8opg-"
-      }
     },
     {
       "cell_type": "markdown",
@@ -1662,15 +1644,15 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "ff288947-6f05-4246-d204-bc49cd991b92"
+        "outputId": "367c1070-53aa-4060-821c-7cde7d9da38d"
       },
       "source": [
         "org_array = np.array([3,1,8,5])\n",
-        "sort_array = np.sort(org_array)\n",
+        "sort_array = np.sort(org_array) # 원본이 바뀌지 않음\n",
         "print( org_array )\n",
         "print( sort_array )"
       ],
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -1685,28 +1667,28 @@
     {
       "cell_type": "code",
       "source": [
-        "sort_array = org_array.sort()"
+        "sort_array = org_array.sort() # 원본을 바꿈"
       ],
       "metadata": {
         "id": "cOKUHFrExYAR"
       },
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "print( org_array)\n",
-        "print( sort_array)"
+        "print( sort_array) # 원본이 바뀌어서 사라짐"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "TfWw_31XxcE6",
-        "outputId": "0b3a957f-f454-4738-d570-2172701d665d"
+        "outputId": "6123434e-3064-4071-f196-963ba39a05dc"
       },
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -1721,7 +1703,7 @@
     {
       "cell_type": "code",
       "source": [
-        "org_array[::-1]"
+        "org_array[::-1] # 전부를 거꾸로 출력하기"
       ],
       "metadata": {
         "colab": {
@@ -1832,7 +1814,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# argsort : 정렬된 행렬의 인덱스를 반환\n",
+        "# argsort : 원래 행렬의 값을 정렬이 된다면~ 몇번째 인덱스일꺼야!를 반환 (정렬된 행렬의 인덱스를 반환)\n",
         "org_array = np.array([3,1,8,5])\n",
         "sort_index = np.argsort( org_array )\n",
         "sort_index"
@@ -1861,7 +1843,7 @@
     {
       "cell_type": "code",
       "source": [
-        "org_array[ sort_index ]"
+        "org_array[ sort_index ] # 정렬이 된다면~ 몇번째 인덱스 일꺼야~를 팬시인덱스처럼 넣으면 정렬된 형태로 나옴"
       ],
       "metadata": {
         "colab": {
@@ -1922,7 +1904,7 @@
       },
       "source": [
         "### ndarray 연산\n",
-        "- 일반연산 : 산술연산, 비교연산 ...\n",
+        "- 일반연산 : 산술연산, 비교연산 ... -> 요소 전부에 적용됨\n",
         "- 선형대수 연산 : 행렬 내적과 전치 행렬"
       ]
     },
@@ -2187,8 +2169,8 @@
         "print( a )\n",
         "print()\n",
         "mat = np.transpose(a)\n",
-        "print(mat)\n",
-        "a.T"
+        "print(mat) # transpose로 가로 세로 바꾼것\n",
+        "a.T # T로 원래것을 가로 세로 바꾼것"
       ],
       "metadata": {
         "colab": {
@@ -2246,7 +2228,7 @@
         "outputId": "89c8fe81-0719-4a9e-c614-b89c52cfa241"
       },
       "source": [
-        "# 합계를 구하는 방법\n",
+        "# 합계를 구하는 방법 -> 요소 전부 더하기\n",
         "array = np.arange(1,11)\n",
         "array.sum()"
       ],
@@ -2267,7 +2249,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# 평균을 구하는 방법\n",
+        "# 평균을 구하는 방법 -> 요소의 평균\n",
         "array.mean()"
       ],
       "metadata": {
@@ -2294,7 +2276,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# 표준편차\n",
+        "# 표준편차 -> 요소들의 표준편차\n",
         "array.std()"
       ],
       "metadata": {
@@ -2349,7 +2331,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# 제곱근\n",
+        "# 제곱근 -> 요소들 각각의 제곱근 구해서\n",
         "array = np.arange(5)\n",
         "np.sqrt( array )"
       ],
@@ -2398,7 +2380,7 @@
         "data = np.loadtxt(drive_path + 'ratings_small.txt', delimiter = '::', dtype = np.int64)\n",
         "data.dtype"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2562,7 +2544,7 @@
         "user_id_all = np.unique(data[:, 0]) # 총 사용자에서 중복값 제거\n",
         "user_id_all.shape # 총 사용자의 수"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2700,7 +2682,7 @@
         "# print(score[ boolean_index ])\n",
         "print(score[ boolean_index ]. shape)\n"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2758,7 +2740,7 @@
         "df_mean = df[ [0,2] ].groupby(0).mean()\n",
         "df_mean[df_mean[2] >= 4]"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2961,7 +2943,7 @@
         "np.savetxt(drive_path + 'user_id_mean.csv', \n",
         "           score_mean, delimiter=', ', fmt='%.3f')"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3002,7 +2984,7 @@
         "arr = np.array( ll )\n",
         "print(arr * 3) "
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3033,7 +3015,7 @@
         "id": "I1upuCeQsibC",
         "outputId": "02cc0bda-5366-4471-bda0-18f43737db61"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3069,7 +3051,7 @@
         "id": "HQAwTTXmtVHt",
         "outputId": "0931b374-3377-4a7e-a130-971394c59fa6"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3102,7 +3084,7 @@
         "id": "vLeRgLIGtgwf",
         "outputId": "1aded7f3-0ebf-4090-a1db-b6207a20ab83"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3149,7 +3131,7 @@
         "id": "GLLstzUouxiB",
         "outputId": "f60c9087-a9d9-4d71-9c31-1cc535783f76"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3186,7 +3168,7 @@
         "id": "yAiEHjn4wVtX",
         "outputId": "d0a48eca-fa5e-4142-82ef-7d63ed30eaea"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3213,7 +3195,7 @@
         "id": "l1TUzVZgxNJ9",
         "outputId": "2e4dcbe4-7beb-499d-c94d-958ed8a6e11b"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3274,7 +3256,7 @@
         "id": "RxGgQXnSxcDH",
         "outputId": "6cdc6eea-1160-4d8d-88d2-d44b54db8a87"
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3318,7 +3300,7 @@
         "id": "pKNMvOgxzfqb",
         "outputId": "7bdb8885-c45f-42c9-d960-11e569cdd116"
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
