Colaboratory를 통해 생성됨

--- a/20220421_py_07_시계열데이터분석_ipynb의_사본.ipynb
+++ b/20220421_py_07_시계열데이터분석_ipynb의_사본.ipynb
@@ -40,7 +40,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "9f12487d-9ae0-4253-9ab5-1431a5c6b373"
+        "outputId": "e88717b0-81ba-4570-8145-332c18950322"
       },
       "source": [
         "# 구글드라이브 연동\n",
@@ -53,7 +53,7 @@
         "# 반복되는 드라이브 경로 변수화\n",
         "drive_path = '/gdrive/My Drive/temp/'"
       ],
-      "execution_count": 76,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -140,7 +140,7 @@
         "# 그래프를 더 높은 해상도로 출력\n",
         "%config InlineBackend.figure_format = 'retina'"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -169,7 +169,7 @@
         },
         "outputId": "3c53a536-55c1-4141-9030-665069ad3ffe"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -419,7 +419,7 @@
         },
         "outputId": "11c6d348-17bf-4d3b-c670-2fd7eae7a885"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2290,7 +2290,7 @@
         "id": "Yo6ex9VWL8mW",
         "outputId": "82972075-97e6-4a05-d2ee-9c422a9be2ad"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2595,7 +2595,7 @@
         },
         "outputId": "b19df675-8856-4236-b967-51d4f65f68ef"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2699,7 +2699,7 @@
         "id": "15ZNtgBl3yk8",
         "outputId": "aff66e1b-ca2e-4696-f80e-47e27012d9b9"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2783,7 +2783,7 @@
         "id": "cUwYhTOQ64Q1",
         "outputId": "4ae82a9c-7057-4657-ade9-f2f45f82babd"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2821,7 +2821,7 @@
         "id": "IZ180wnr62B5",
         "outputId": "f995b0ee-cf05-4408-c514-5154a18f88cd"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2859,7 +2859,7 @@
         "id": "l_BapQTI6oA1",
         "outputId": "5e0e26ef-d17a-48a7-c1da-9209f6159171"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2897,7 +2897,7 @@
         "id": "YKlebyLj7tky",
         "outputId": "665021a7-5a4d-4ca4-98d3-856f769bad31"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3064,7 +3064,7 @@
         "id": "7xS8NcwH8pHX",
         "outputId": "034daa63-b3c1-4153-e5d8-21d2349b323c"
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3217,7 +3217,7 @@
         "id": "aGbqNdG2-CPU",
         "outputId": "a0579e6d-dad6-4a38-ff34-964bc61f53e6"
       },
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3418,7 +3418,7 @@
         "id": "qDJRg0HN-PuR",
         "outputId": "9f588b89-2e30-471b-f32b-369f1a9dbd35"
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3619,7 +3619,7 @@
         "id": "QNSzKKEV-rd9",
         "outputId": "fcf7d521-1b7b-4728-8886-f9bce596f49b"
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3821,7 +3821,7 @@
         "id": "rsX-WZgb_l8K",
         "outputId": "8b76f3f2-a5bf-4992-c0bf-eb30c8c7fc0f"
       },
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3979,7 +3979,7 @@
         "id": "EssLoLY__yaK",
         "outputId": "7cf7ddfb-5a8f-4104-8335-2cd8d297cf4d"
       },
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4014,7 +4014,7 @@
         "id": "sFPzZoIuBFm3",
         "outputId": "8ff5e736-361e-4f57-d2c6-22b31949ebf9"
       },
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4215,7 +4215,7 @@
         "id": "MQ7i3iywBvOD",
         "outputId": "43739056-3439-441a-cb63-0aeec1825242"
       },
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4367,7 +4367,7 @@
         "id": "dwFOGzwtB3wl",
         "outputId": "8bac3980-ddae-4cbd-dc39-8d01a15089d2"
       },
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4600,7 +4600,7 @@
         },
         "outputId": "a3fda52c-9167-4aad-f439-42a3a2e3335e"
       },
-      "execution_count": 81,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4635,7 +4635,7 @@
         "id": "7adnuVRMHAsD",
         "outputId": "9186e08a-677b-4dc3-d2d4-b54162446f32"
       },
-      "execution_count": 82,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4810,7 +4810,7 @@
         "id": "O45K9kFoIGGX",
         "outputId": "e78e7487-adb5-45aa-ffa3-5e3798c36d3c"
       },
-      "execution_count": 83,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4849,7 +4849,7 @@
         "id": "ecNBDuoZIH5I",
         "outputId": "75473ebb-608a-42e7-97cb-4dff913c12a4"
       },
-      "execution_count": 85,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5006,7 +5006,7 @@
         "id": "VTyrLZomIpmp",
         "outputId": "35c1c171-d8bc-4c4d-e8c2-18b38de447d0"
       },
-      "execution_count": 86,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5227,7 +5227,7 @@
         "id": "0kBgZS2xJ9Bq",
         "outputId": "ec1a1dec-1fbe-47b5-f0f9-09941d270abf"
       },
-      "execution_count": 90,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5278,7 +5278,7 @@
         "id": "UaHJU55NLFGs",
         "outputId": "de2edece-b3b0-4312-98e7-28a39cd69006"
       },
-      "execution_count": 99,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5348,7 +5348,7 @@
         "id": "zVHJQjenNmbH",
         "outputId": "5969a169-c1bd-41a2-ec8b-6b128177228f"
       },
-      "execution_count": 104,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5406,7 +5406,7 @@
         "id": "mzimNRaTTU8t",
         "outputId": "1ee4d282-7098-478f-9da6-33410213eef9"
       },
-      "execution_count": 110,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5454,7 +5454,7 @@
         "id": "ZXzAx937Umc6",
         "outputId": "caa7f03a-5be7-4e4d-c006-f2cf7a58064c"
       },
-      "execution_count": 112,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5507,7 +5507,7 @@
         "id": "lkv9vVuJV4vC",
         "outputId": "e0df0b28-b478-485e-ce0e-6119ed55cc0b"
       },
-      "execution_count": 119,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5562,7 +5562,7 @@
         "id": "mAsvNiELY6JV",
         "outputId": "9e227414-e62e-432b-c609-6b63036bd9a2"
       },
-      "execution_count": 120,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5610,7 +5610,7 @@
       "metadata": {
         "id": "cSxKj18aZMSY"
       },
-      "execution_count": 123,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5627,7 +5627,7 @@
         "id": "rywYsC9CZg2y",
         "outputId": "0989023e-c5ac-4fce-a0e0-318375aa5a64"
       },
-      "execution_count": 127,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5670,7 +5670,7 @@
         "id": "k7-BFo_5aj6X",
         "outputId": "c291fffa-07fa-41b9-e0e6-a3e20421ea7e"
       },
-      "execution_count": 128,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5714,7 +5714,7 @@
         "id": "t0X905Epa0Iv",
         "outputId": "aeab17b9-045f-44ce-ab6b-162bd2fd42d2"
       },
-      "execution_count": 131,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5743,6 +5743,44 @@
           }
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "[pandas.core.window.rolling.Rolling.apply](https://pandas.pydata.org/docs/reference/api/pandas.core.window.rolling.Rolling.apply.html?highlight=apply#pandas.core.window.rolling.Rolling.apply)\n",
+        "\n",
+        "사용자 정의 이동창 함수\n",
+        "- 사용자 정의 함수가 배열의 각 조각으로부터 단일 값(감소)을 반환\n"
+      ],
+      "metadata": {
+        "id": "nCf5WvKsQzhT"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "[scipy.stats.percentileofscore](https://docs.scipy.org/doc/scipy/reference/generated/scipy.stats.percentileofscore.html)\n",
+        "- 점수 목록을 기준으로 점수의 백분위수 순위를 계산"
+      ],
+      "metadata": {
+        "id": "rQpZEiGNQ2mI"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 2%의 연간 APPL 수익률에 대한 백분위 점수\n",
+        "# percentileofscore: 전체 표본에서 특정 값이 차지하는 백분위 점수를 반환\n",
+        "from scipy.stats import percentileofscore\n",
+        "\n",
+        "score_at_2percent = lambda x: percentileofscore(x, 0.02)\n",
+        "rdf_rets['AAPL'].rolling(250).apply(score_at_2percent).plot()"
+      ],
+      "metadata": {
+        "id": "utBrRkqDQdZr"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
