Colaboratory를 통해 생성됨

--- a/20220503_ml_06_지도학습_GradientBoosting.ipynb
+++ b/20220503_ml_06_지도학습_GradientBoosting.ipynb
@@ -36,7 +36,7 @@
       "source": [
         "!pip install mglearn"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -154,7 +154,7 @@
         "from warnings import filterwarnings\n",
         "filterwarnings('ignore')"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2145,7 +2145,7 @@
         "import lightgbm\n",
         "lightgbm.__version__"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2241,7 +2241,7 @@
         "# 특성 중요도 시각화\n",
         "sns.barplot(x=model.feature_importances_, y=cancer.feature_names)"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2292,7 +2292,7 @@
         "fig, axes = plt.subplots( figsize = (10,12))\n",
         "plot_importance(model, ax= axes)"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2346,7 +2346,7 @@
         "id": "Nrz2hbnLSyfQ"
       },
       "source": [
-        "# 분류 머신러닝 알고리즘 정리\n",
+        "# 머신러닝 알고리즘 정리\n",
         "\n",
         "- 나이브 베이즈(Naive Bayes) : 베이즈(Bayes) 통계와 생성 모델에 기반\n",
         "\n",
@@ -2362,6 +2362,58 @@
         "\n",
         "- 신경망(Neural Network) : 심층 연결 기반"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Stacking \n",
+        "\n",
+        "- 스태킹은 두 개의 수준으로 머신러닝 모델을 결합\n",
+        "\n",
+        " - 기본수준: 모델이 모든 데이터를 사용하여 예측을 만듦\n",
+        " - 메타수준: 베이스 모델의 예측을 입력으로 받아 최종 예측을 만듦 (블랜더 blender 또는 메타학습기 meta learnner)\n",
+        "\n",
+        "- 스태킹은 최종적으로 예측을 결합하는 메타 모델로 인해 기본적인 앙상블과 구별\n",
+        "- 메타모델은 예측을 입력으로 받기 때문에 회귀에서는 선형 회귀, 분류에서는 로지스택 회귀 같은 간단한 모델 사용을 권장\n"
+      ],
+      "metadata": {
+        "id": "NyEGK8K2SbZl"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.ensemble import StackingClassifier\n",
+        "from sklearn.ensemble import RandomForestClassifier\n",
+        "from sklearn.linear_model import LogisticRegression\n",
+        "from xgboost import XGBClassifier\n",
+        "from sklearn.model_selection import cross_val_score\n",
+        "from sklearn.model_selection import StratifiedKFold\n",
+        "from sklearn.datasets import load_breast_cancer\n",
+        "\n",
+        "cancer = load_breast_cancer()\n",
+        "X = cancer.data\n",
+        "y = cancer.target\n",
+        "\n",
+        "\n",
+        "base_models = []\n",
+        "base_models.append( ('lr', LogisticRegression()) )\n",
+        "base_models.append( ('xgb', XGBClassifier()) )\n",
+        "base_models.append( ('rf', RandomForestClassifier(random_state=0)) )\n",
+        "\n",
+        "meta_model = LogisticRegression()\n",
+        "\n",
+        "model = StackingClassifier(estimators=base_models, final_estimator=meta_model)\n",
+        "\n",
+        "kfold = StratifiedKFold(n_splits=5)\n",
+        "scores = cross_val_score(model, X, y, cv=kfold)\n",
+        "scores, scores.mean()"
+      ],
+      "metadata": {
+        "id": "gYt15NHdSdPe"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
